--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/flatly/bulmaswatch.min.css"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Happening</title>
   </head>
-  <body>
+  <body> 
     <div id="root"></div>
   </body>
 </html>
