rolled back to simple list view

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <!-- <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/flatly/bulmaswatch.min.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/171a9ff2cf.js"></script>
     <title>Happening</title>
   </head>
-  <body> 
+  <body>
     <div id="root"></div>
   </body>
 </html>
