--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <!-- <link rel="stylesheet" href="https://unpkg.com/bulmaswatch/flatly/bulmaswatch.min.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/171a9ff2cf.js"></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.2.0/mapbox-gl.css' rel='stylesheet' />
     <title>Happening</title>
   </head>
   <body>
